@@ -21,6 +21,7 @@ Engine features:
 * 'Block' powers can now use post_power to trigger a power when taking damage.
 * Power descriptions are now displayed in action bar tooltips. This can be controlled with the 'tooltip_length' property in menus/actionbar.txt.
 * A dialog box is now displayed instead of a log message when the player dies, giving the options to exit or respawn (if applicable).
+* Added movement input type dialog box. It is displayed for new players to easily select between keyboard, mouse, and joystick movement.
 
 Engine fixes:
 
